# itmo-summer-2025

./: .gitignore  01_mnist_template.ipynb  02_mnist_load_template.ipynb  README.md  pyproject.toml
src/: clf_loops.py  wf_datasets.py
