[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11,<3.12"
numpy = "<2.0"

# our package
# svetlanna = { git = "https://github.com/CompPhysLab/SVETlANNa.git", branch = "dev" }
# svetlanna = "^1.0.1"

# OLD METHOD to import our package
svetlanna = { path = "../SVETlANNa/", develop = false }

matplotlib = "<3.9.2"
jupyter = "^1.1.1"
tqdm = "^4.66.5"

torch = "^2.7.1"
torchvision = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"